--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <application
-        android:label="Pro Tracvel"
+        android:label="Unique hotel app"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
         <activity
