--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -101,6 +101,7 @@ dependencies:
   flutter_inappwebview: ^5.7.2+3
   razorpay_flutter: ^1.2.7
   flutter_paypal: ^0.2.0
+  flutter_launcher_icons: ^0.13.1
 
 dev_dependencies:
   flutter_test:
@@ -109,13 +110,16 @@ dev_dependencies:
   razorpay_flutter: ^1.2.7
   flutter_paypal: ^0.2.0
   easy_localization: ^3.0.0
-  flutter_launcher_icons: "^0.13.1"
+  # flutter_app_name: ^0.1.0
 
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/icon/logo.png"
+  image_path: "assets/images/logo.png"
   min_sdk_android: 21 # android min sdk min:16, default 21
+
+  # flutter_app_name:
+  # name: "unique royal hotel"
   
 
   # The "flutter_lints" package below contains a set of recommended lints to
